--- a/src/styles/Register.module.css
+++ b/src/styles/Register.module.css
@@ -86,29 +86,25 @@ input:-webkit-autofill {
 
 .Mainbutton {
   .button {
-    appearance: none;
-    background-color: transparent;
-    border: 2px solid #1a1a1a;
-    border-radius: 15px;
-    color: #1d1d1d;
-    cursor: pointer;
-    font-family: Roobert, -apple-system, BlinkMacSystemFont, "Segoe UI",
-      Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-      "Segoe UI Symbol";
-    font-size: 16px;
-    font-weight: 600;
-    line-height: normal;
-    margin: 1em auto;
-    padding: .6em 7.5em;
-    outline: none;
+    background-color: white;
+    border: 2px solid rgb(0, 0, 0);
     text-align: center;
-    text-decoration: none;
+    color: black;
+    border-radius: 0.9em;
+    width: 20em;
+    padding: .5em 0;
+    margin: 0 0 1em;
     transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
     user-select: none;
+    overflow: hidden;
     -webkit-user-select: none;
     touch-action: manipulation;
-
     will-change: transform;
+    @media (max-width: 450px) {
+    width: 13em;
+    height: auto;
+  }
+
     & p {
       margin: 0.1em 0 0 0;
     }
